--- a/src/app/views/planet-details/planet-details.component.html
+++ b/src/app/views/planet-details/planet-details.component.html
@@ -1,17 +1,68 @@
 <p (click)="goBack()">Back</p>
-<div>
-  <p>{{ details.name }}</p>
+<div class="planet-details">
+  <!-- <p>{{ details.name }}</p>
   <p>{{ details.rotation_period }}</p>
   <p>{{ details.orbital_period }}</p>
-  <p>{{ details.diameter }}</p>
-  <p>{{ details.climate }}</p>
+  <p>{{ details.diameter }}</p> -->
+  <!-- <p>{{ details.climate }}</p>
   <p>{{ details.gravity }}</p>
-  <p>{{ details.terrain }}</p>
-  <p>{{ details.surface_water }}</p>
+  <p>{{ details.terrain }}</p> -->
+  <!-- <p>{{ details.surface_water }}</p>
   <p>{{ details.population }}</p>
-  <p>{{ details.residents }}</p>
-  <p>{{ details.films }}</p>
+  <p>{{ details.residents }}</p> -->
+  <!-- <p>{{ details.films }}</p>
   <p>{{ details.created }}</p>
   <p>{{ details.edited }}</p>
-  <p>{{ details.url }}</p>
+  <p>{{ details.url }}</p> -->
+</div>
+<div class="planet-details">
+  <div class="planet-details-header">
+    <div scope="col">
+      {{ details.name }}
+    </div>
+    <div scope="col"><p (click)="goBack()">Back</p></div>
+  </div>
+
+  <div class="planet-details-info">
+    <div>
+      <div scope="row">Rotation period</div>
+      <div>{{ details.rotation_period }}</div>
+    </div>
+    <div>
+      <div scope="row">Orbital period</div>
+      <div>{{ details.orbital_period }}</div>
+    </div>
+    <div>
+      <div scope="row">Diameter</div>
+      <div>{{ details.diameter }}</div>
+    </div>
+    <div>
+      <div scope="row">Climate</div>
+      <div>{{ details.climate }}</div>
+    </div>
+    <div>
+      <div scope="row">Gravity</div>
+      <div>{{ details.gravity }}</div>
+    </div>
+    <div>
+      <div scope="row">Terrain</div>
+      <div>{{ details.terrain }}</div>
+    </div>
+    <div>
+      <div scope="row">Surface water</div>
+      <div>{{ details.surface_water }}</div>
+    </div>
+    <div>
+      <div scope="row">Population</div>
+      <div>{{ details.population }}</div>
+    </div>
+    <div>
+      <div scope="row">Residents</div>
+      <div>{{ details.residents }}</div>
+    </div>
+    <div>
+      <div scope="row">Films</div>
+      <div>{{ details.films }}</div>
+    </div>
+  </div>
 </div>
